# triton-shared

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  create_conda_env.sh  dockerfile  find.md  install_python_dependencies.sh  triton_tts_nv.cc
backend/: compiler.py  driver.py  name.conf
include/triton-shared/Conversion/: CMakeLists.txt
include/triton-shared/Conversion/LinalgToLLVM/: LinalgToLLVM.h  Passes.h  Passes.td
include/triton-shared/Utils/: PassUtils.h
lib/Conversion/: CMakeLists.txt
lib/Conversion/LinalgToLLVM/: CMakeLists.txt  LinalgToLLVM.cpp  MemrefCopyToLinalg.cpp
lib/Utils/: CMakeLists.txt  PassUtils.cpp
python/examples/: 01-vector-add.py  benchmark.py  conftest.py  test_early_return.py  test_gather_scatter.py  test_mask.py  test_nested_loops.py  test_scalar_store.py  test_sign_extend.py  test_tensor_index_iterargs.py
tools/: RegisterTritonSharedDialects.h
tools/triton-shared-opt/: CMakeLists.txt  triton-shared-opt.cpp
